# api/docs/swagger.json
@@ -4,67 +4,6 @@
         "contact": {}
     },
     "paths": {
-        "/v1/catalogs": {
-            "get": {
-                "description": "This API for getting list of catalogs",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "catalogs"
-                ],
-                "summary": "List",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Page",
-                        "name": "page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Limit",
-                        "name": "limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authors",
-                        "name": "authors",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Categories",
-                        "name": "categories",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.List"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.StandardErrorModel"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/models.StandardErrorModel"
-                        }
-                    }
-                }
-            }
-        },
         "/v1/catalogs/authors": {
             "get": {
                 "description": "This API for getting list of authors",
@@ -139,6 +78,12 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Author"
+                        }
+                    },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
@@ -249,6 +194,7 @@
                 }
             },
             "delete": {
+                "description": "This API for deleting the author",
                 "consumes": [
                     "application/json"
                 ],
@@ -269,6 +215,9 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": ""
+                    },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
@@ -308,6 +257,18 @@
                         "type": "string",
                         "description": "Limit",
                         "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Limit",
+                        "name": "authors",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Limit",
+                        "name": "category",
                         "in": "query"
                     }
                 ],
@@ -909,7 +870,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": ""
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Order"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
@@ -1091,23 +1055,6 @@
                 }
             }
         },
-        "models.List": {
-            "type": "object",
-            "properties": {
-                "Author": {
-                    "$ref": "#/definitions/models.Author"
-                },
-                "Book": {
-                    "$ref": "#/definitions/models.Book"
-                },
-                "Categories": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Category"
-                    }
-                }
-            }
-        },
         "models.ListAuthors": {
             "type": "object",
             "properties": {
@@ -1224,9 +1171,6 @@
                     "type": "string"
                 },
                 "Description": {
-                    "type": "string"
-                },
-                "OrderId": {
                     "type": "string"
                 }
             }
